# realworld-rust-axum

./: Cargo.toml
src/: db.rs  lib.rs  main.rs
src/config/: middle_layer.rs  mod.rs
src/models/: mod.rs  user.rs
src/routes/: users.rs
