[package]
name = "realworld-rust-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
axum = "0.7.4"
jsonwebtoken = "9.2.0"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_derive = "1.0.197"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "mysql"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
